--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,73 +1,44 @@
-<div id="sidebar_left">
-  <%= module_header %>
-  <div class="module">
-    <ul>
-      <% if current_user.client %>
-      <li class="delete"><%= link_to t("user.cancel_account_button"),@user, :confirm => t('user.msg.cancel_account'), :href => '#' %></li>
-     <% end %>
-      <li class="exit"><%= link_to t( "global.exit"), :back %></li>
-      <% if can? :manage, User %>
-        <li class="delete"><%= link_to t( "global.delete"), @user, :confirm => 'Are you sure?', :method => :delete %></li>
-      <% end %>
-    </ul>
-  </div>
-   <%= render 'layouts/left_sidebar_modules' %>
-  </div>
+<h1 class="offset3"><%= t "user.t_edit_user" %></h1>
+<div class="span12">
+  <%= simple_form_for @user, :html => { :class => "form-horizontal"} do |f| %>
+      <div class="span5 well">
+        <h4 class="offset4"><%= t("global.required") %></h4>
+        <%= f.input :username, :label => (t "user.username") %>
+        <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
+        <%= f.input :password, :required => true %>
+        <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
+        <%= f.input :email, :label => (t "global.email") %>
+        <hr/>
+        <% if current_user.employee %>
+            <h4 class="offset4"><%= t("role.tab.permissions") %></h4>
+            <%= f.input :client, :as => :radio_buttons, :label =>(t "user.client") %>
+            <%= f.input :active, :as => :radio_buttons, :label =>(t "user.active") %>
+            <%= f.input :employee, :as => :radio_buttons, :label =>(t "user.employed") %>
+            <%= f.input :workorder_assignability, :as => :radio_buttons, :label =>(t "user.assignable") %>
+            <%= f.association :role %>
+        <% end %>
+      </div>
+      <div class="span5 well">
+        <h4 class="offset4"><%= t("global.additional") %></h4>
+        <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
+        <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
+        <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
+        <%= f.input :zip, :input_html => {:size => 30}, :label =>(t "global.zip") %>
+        <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
+        <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
+        <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
+        <% if current_user == nil %>
+            <%= hidden_field_tag "user[created_by]", "SELF" %>
+        <% else %>
+            <%= hidden_field_tag "user[created_by]", current_user.username %>
+        <% end %>
+      </div>
 
-<div id=center_col>
-<div id="ddtabs1" class="basictab">
-  <ul>
-    <li><a href="#<%= t "users.tab.details" %>" rel="tab1"><%= t "users.tab.details" %></a></li>
-    <li><a href="#<%= t "users.tab.contact_info" %>" rel="tab2"><%= t "users.tab.contact_info" %></a></li>
-    <li><a href="#<%= t "global.tab.notes" %>" rel="tab3"><%= t "global.tab.notes" %></a></li>
-    <li><a href="#<%= t "users.tab.permissions" %>" rel="tab4"><%= t "users.tab.permissions" %></a></li>
-  </ul>
-</div>
-<div class="tabcontainer">
-  <div id="tab1" class="tabcontent">
-      <%= simple_form_for(@user) do |f| %>
-          <%= f.error_notification %>
-          <%= f.input :username, :label => (t "user.username") %>
-          <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
-          <%= f.input :password, :input_html => {:autocomplete => 'off'}, :label => (t "user.password") %>
-          <%= f.input :password_confirmation, :input_html => {:autocomplete => 'off'}, :label => (t "user.password_confirmation") %>
-          <%= f.input :email, :label => (t "global.email") %>
-          <%= hidden_field_tag "user[edited_at]", Time.now %>
-          <%= hidden_field_tag "user[edited_by]", current_user.username %>
-          <div class="center"><%= f.submit %></div>
+      <div class="form-actions span10">
+        <%= f.submit nil, :class => "btn btn-primary" %>
+        <%= link_to t("global.cancel"), root_path, :class => "btn" %>
+      </div>
 
-
-  </div>
-<div id="tab2" class="tabcontent">
-          <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
-          <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
-          <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
-          <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
-          <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
-          <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
-          <%= f.input :zip, :input_html => {:size => 30}, :label => (t "global.zip") %>
-          <%= hidden_field_tag "user[edited_at]", Time.now %>
-          <%= hidden_field_tag "user[edited_by]", current_user.username %>
-          <div class="center"><%= f.button :submit %></div>
-  </div>
-<div id="tab3" class="tabcontent">
-          <%= f.input :notes, :input_html => {:rows => 15}, :label => (t "global.notes") %>
-          <%= hidden_field_tag "user[edited_at]", Time.now %>
-          <%= hidden_field_tag "user[edited_by]", current_user.username %>
-          <div class="center"><%= f.button :submit %></div>
-  </div>
-  <% if can? :manage, User %>
-  <div id="tab4" class="tabcontent">
-          <%= f.association :role %>
-
-          <%= f.input :employee, :as => :radio, :hint => (t "user.hint.employed" ),  :label => (t "user.employed")   %>
-          <%= f.input :client, :as => :radio, :hint => (t "user.hint.client" ),:label => (t "user.client")  %>
-          <%= f.input :workorder_assignability, :as => :radio, :hint => (t "user.hint.assignable" ),:label => (t "user.assignable") %>
-          <%= hidden_field_tag "user[edited_at]", Time.now %>
-          <%= hidden_field_tag "user[edited_by]", current_user.username %>
-          <div class="center"><%= f.button :submit %></div>
-  </div>
-  <% end %>
   <% end %>
 </div>
 </div>
