--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -33,10 +33,7 @@
   </div>
 
 <div class="span2">
-    <% if current_user.client %>
-        <%= menu_button t("workorder.t_add_new"), new_user_work_order_path(:user_id => current_user.id),  "icon-pencil icon-white"  %>
-    <% else %>
-        <%= menu_button t("global.create"), clients_path, "icon-pencil icon-white" %>
-    <% end %>
+        <%= menu_button t("global.create"), new_user_work_order_path(:user_id => current_user.id),  "icon-pencil icon-white" if current_user.client  %>
+        <%= menu_button t("global.create"), clients_path, "icon-pencil icon-white" if can? :manage, User %>
   </div>
 </div>
