--- a/app/views/work_orders/edit.html.erb
+++ b/app/views/work_orders/edit.html.erb
@@ -18,13 +18,12 @@
                  <%= f.association :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
                  <%= f.input :assigned_to_username,:label => (t "workorder.assigned_to"), :as => :select, :collection => User.where("workorder_assignability = ?", true), :value_method => :name, :disabled => true %>
              <% end %>
+
+          <%= markdown_hint %>
+
              <%= f.input :description, :label => (t "workorder.details"), :input_html => { :class => "input-block-level", :rows => "10"} %>
 
-      <% if can? :close, WorkOrder %>
-              <%= f.input :resolution, :label => (t "workorder.resolution"), :input_html => { :class => "input-block-level", :rows => "10"}  %>
-                <%= f.input :closed, :label => (t "workorder.closed"), :hint => (t "workorder.hint.re_open")%>
-              <% end %>
-          </div>
+
              <div class="form-actions">
                <%= f.submit nil, :class => "btn btn-primary" %>
                <%= link_to t("global.cancel"), work_order_path, :class => "btn" %>
@@ -33,25 +32,26 @@
           </div>
 
 </div>
-
+</div>
 </div>
 <!--EOF WO Edit Form-->
 <!--SOF Sidebar-->
 <div class="span2">
-  <div><p><a href="#resolution" role="button" class="btn btn-success btn-large btn-block" data-toggle="modal">Mark as Completed</a></p></div>
+  <div><p><a href="#close" role="button" class="btn btn-success btn-large btn-block" data-toggle="modal">Mark as Completed</a></p></div>
 
           <!-- Modal -->
-          <div id="resolution" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div id="close" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
               <h3 id="myModalLabel">Work Order Resolution</h3>
             </div>
             <div class="modal-body">
-              <p>Test</p>
+              <%= render :partial => 'work_orders/close' %>
             </div>
           </div>
   <p><%= link_to t("global.close"), close_path, :class => "btn btn-success btn-large btn-block", :confirm => (t "workorder.message_close_confirmation"), :method => :put  %></p>
   <p><%= link_to (t "global.delete"), work_order_path, :class => "btn btn-danger btn-large btn-block" , :confirm => t("alert.destroy"), :method => :delete %></p>
   <%= menu_button t("global.exit"), work_orders_path, " icon-arrow-left icon-white" %>
+</div>
 </div>
 </div>
