--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -1,4 +1,5 @@
-<%= simple_form_for [@work_order,@reply], :html => {:class => "form-horizontal"} do |f| %>
+<%= simple_form_for [@work_order,@reply] do |f| %>
+    <%=  %>
     <%= f.input :content,:label => (t 'reply.message'), :input_html => { :class => "input-block-level", :rows => "10"}  %>
      <%= f.input :work_order_id, :as => :hidden %>
     <div class="form-actions">
