--- a/app/views/work_orders/_close.html.erb
+++ b/app/views/work_orders/_close.html.erb
@@ -1,6 +1,7 @@
-<%= simple_form_for @work_order, :html => {:class => "form-horizontal"} do |f| %>
-    <%= f.input :resolution %>
+<%= simple_form_for @work_order, :class => "form-horizontal" do |f| %>
     <%= f.input :closed, :input_html => {:checked => true} %>
+    <%= markdown_hint %>
+    <%= f.input :resolution, :input_html => {:rows => 7, :cols => 40} %>
     <div class="form-actions">
       <%= f.submit nil, :class => "btn btn-primary" %>
       <%= link_to t("global.cancel"), work_order_path, :class => "btn" %>
